# quakecast-metal

./: .gitignore  AUTORESEARCH.md  EVALUATION_PLAN.md  LICENSE  README.md  REAL_DATA_BASELINE.md  catalog-manifest.yaml  pyproject.toml
.github/workflows/: benchmark.yml
benchmarks/: README.md  attempts.jsonl  benchmark-spec.json  leaderboard.md  metric-audit.md
scripts/: benchmark_checkpoint.py  build_tensors.py  compare_checkpoints.py  download_catalogues.py  export_validation_forecast.py  prepare_catalogues.py  render_benchmark.py  train_real.py  verify_catalogues.py  verify_processed.py
src/quakecast/: __init__.py  catalogues.py  data.py  demo.py  forecaster.py  model.py
tests/: conftest.py  test_benchmark.py  test_catalogues.py  test_forecaster.py  test_pipeline.py
