[project]
name = "earthquake-rate-playground"
version = "0.1.0"
description = "A Mac-friendly SmaAt-UNet playground for next-day aftershock-rate forecasting"
authors = [{ name = "James Edward Ball" }]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10",
    "numpy>=2.0",
    "torch>=2.7",
    "wandb>=0.25",
]

[project.scripts]
quakecast-demo = "quakecast.demo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8"]

[tool.hatch.build.targets.wheel]
packages = ["src/quakecast"]
